# lightex

./: CMakeLists.txt  LICENSE  README.md  apply_clang_format.sh  build_all.sh  build_binary.sh  lightex.sublime-project  parse_program_to_dot.sh  parse_program_to_html.sh  run_binary_on_sample.sh
lightex/: lightex.cc  lightex.h  workspace.cc  workspace.h
lightex/ast/: ast.h  ast_adapted.h
lightex/binaries/: parse_program_to_dot.cc  parse_program_to_html.cc
lightex/dot_converter/: dot_visitor.cc  dot_visitor.h
lightex/grammar/: grammar.h
lightex/html_converter/: html_preprocessor.cc  html_preprocessor.h  html_visitor.cc  html_visitor.h
lightex/styles/: lightex.sty
lightex/utils/: comment_remover.cc  comment_remover.h  counter.cc  counter.h  file_utils.cc  file_utils.h
lightex/visitor/: dot_visitor.cc  dot_visitor.h
samples/: input.tex  input.txt  output.dot  output.html
tests/: main.cc
utils/: generate_irunner_html.py
